@@ -1,5 +1,10 @@
 2009-12-15
 
+	* src/update_check.c: don't show update dialog if modal dialog exists
+	  or incorporation is active.
+
+2009-12-15
+
 	* src/icons/folder-search.png: modified.
 	* src/icons/folder-group.png: added.
 	* src/stock_pixmap.[ch]
